# ChangeLog for dev-util/aruba
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/aruba/ChangeLog,v 1.34 2014/03/04 07:35:04 graaff Exp $

  04 Mar 2014; Hans de Graaff <graaff@gentoo.org> aruba-0.5.4.ebuild:
  Relax dev-ruby/childprocess dependency in accordance with the gemspec.

*aruba-0.5.4 (09 Feb 2014)

  09 Feb 2014; Hans de Graaff <graaff@gentoo.org> +aruba-0.5.4.ebuild:
  Version bump.

  01 Feb 2014; Akinori Hattori <hattya@gentoo.org> aruba-0.5.3.ebuild:
  ia64 stable wrt bug #493780

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> aruba-0.5.3.ebuild:
  Stable for x86, wrt bug #493780

  19 Jan 2014; Pacho Ramos <pacho@gentoo.org> aruba-0.5.3.ebuild:
  amd64 stable, bug 493780

  26 Dec 2013; Markus Meier <maekke@gentoo.org> aruba-0.5.3.ebuild:
  arm stable, bug #493780

  22 Dec 2013; Jeroen Roovers <jer@gentoo.org> aruba-0.5.3.ebuild:
  Stable for HPPA (bug #493780).

  15 Dec 2013; Hans de Graaff <graaff@gentoo.org> -aruba-0.4.11.ebuild,
  -aruba-0.5.1.ebuild, -aruba-0.5.2.ebuild:
  Cleanup.

*aruba-0.5.3 (12 Aug 2013)

  12 Aug 2013; Manuel Rüger <mrueg@gentoo.org> +aruba-0.5.3.ebuild:
  Non-maintainer commit. Version bump

*aruba-0.5.2 (25 Apr 2013)

  25 Apr 2013; Hans de Graaff <graaff@gentoo.org> +aruba-0.5.2.ebuild:
  Version bump.

  15 Jan 2013; Rick Farina <zerochaos@gentoo.org> aruba-0.4.11.ebuild,
  aruba-0.5.1.ebuild:
  adding ~arm keywords to net-analyzer/metasploit rdeps

  01 Jan 2013; Hans de Graaff <graaff@gentoo.org> aruba-0.5.1.ebuild:
  Tighten up dependencies after investigating bug 449490.

  01 Jan 2013; Hans de Graaff <graaff@gentoo.org> -aruba-0.5.0.ebuild:
  Cleanup.

*aruba-0.5.1 (11 Dec 2012)

  11 Dec 2012; Hans de Graaff <graaff@gentoo.org> +aruba-0.5.1.ebuild:
  Version bump.

*aruba-0.5.0 (24 Nov 2012)

  24 Nov 2012; Hans de Graaff <graaff@gentoo.org> +aruba-0.5.0.ebuild:
  Version bump.

  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> aruba-0.4.11.ebuild: