@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/aruba
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/aruba/ChangeLog,v 1.34 2014/03/04 07:35:04 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/aruba/ChangeLog,v 1.35 2014/05/13 20:31:06 mrueg Exp $
+
+  13 May 2014; Manuel Rüger <mrueg@gentoo.org> aruba-0.5.3.ebuild,
+  aruba-0.5.4.ebuild:
+  Remove ruby18 target.
 
   04 Mar 2014; Hans de Graaff <graaff@gentoo.org> aruba-0.5.4.ebuild:
   Relax dev-ruby/childprocess dependency in accordance with the gemspec.
